[tool.poetry]
name = "ticket-summary"
version = "0.1.0"
description = ""
authors = ["jaylesmajor <143688733+jaylesmajor@users.noreply.github.com>"]
readme = "README.md"
package-mode = false
[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.26"
streamlit = "^1.46.1"
openai = "0.28.0"
community = "^1.0.0b1"
pypdf = "^5.6.1"
tiktoken = "^0.9.0"
langchain-community = "^0.3.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
